Fix css,the display cart was not centered

--- a/src/App.scss
+++ b/src/App.scss
@@ -317,6 +317,7 @@
   // --------Cart--------
 
   .container-cart {
+    border: #00cdbd solid 1px;
     position: relative;
     top: 0px;
     left: 0;
@@ -340,13 +341,13 @@
 
     .price-cart {
       .Sous-total {
-        width: 200px;
+        width: 300px;
       }
       .Livraison {
-        width: 200px;
+        width: 300px;
       }
       .total {
-        width: 200px;
+        width: 300px;
       }
     }
   }
